# Rishit-Singh_EnC_Inductions

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  kratos  kratos-env.sh  setup.sh  setup_mac.sh
PCB/Assignment_1/: Assignment_1.kicad_sym  first_project.kicad_prl  first_project.kicad_pro  first_project.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Assignment_2/: Assignment2.kicad_sym  Assignment_2.kicad_pcb  Assignment_2.kicad_prl  Assignment_2.kicad_pro  Assignment_2.kicad_sch  Assignment_2.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Assignment_3/: Assignment_3.bak  Assignment_3.kicad_pcb  Assignment_3.kicad_prl  Assignment_3.kicad_pro  Assignment_3.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Assignment_3/Assignment3.pretty/: BUCK_5A.kicad_mod
adapters/: genesis_bridge.py
libs/Assignment1.pretty/: TCA9548A.kicad_mod
libs/Assignment2.pretty/: MODULE_ESP32-S3-DEVKITC-1U-N8R8.kicad_mod  MODULE_GY-521.kicad_mod  XCVR_HC-SR04.kicad_mod
libs/Assignment3.pretty/: BUCK_20A.kicad_mod
src/kratos_inductions/arm_humble/: CMakeLists.txt  package.xml
src/kratos_inductions/arm_humble/launch/: display.launch.py
src/kratos_inductions/arm_humble/scripts/: ik_controller.py
src/kratos_rishit/: CMakeLists.txt  README.md  package.xml
src/kratos_rishit/launch/: bringup.launch.py
src/kratos_rishit/src/: rover_status_msg_publisher.py  rover_status_msg_subscriber.py
src/kratos_rishit_msgs/: CMakeLists.txt  package.xml
src/kratos_rishit_msgs/msg/: RoverStatus.msg
src/week4_control/: README.md  README_Docker.md
src/week4_control/rover_description/: CMakeLists.txt  package.xml
src/week4_control/week4_rover_control/: CMakeLists.txt  package.xml
src/week4_control/week4_rover_control/config/: rover_controllers.yaml
src/week4_control/week4_rover_control/launch/: sim.launch.py
src/week4_control/week4_rover_control/scripts/: double_ackermann.py
(+9 files in other folders)
